apps/staging/commafeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-postgres
spec:
  ingressClassName: traefik
  rules:
    - host: notset.alexandrud.com
      http:
        paths:
          - backend:
              service:
                name: commafeed-postgres
                port:
                  number: 8082
            path: /
            pathType: Prefix
